# nus-cheatsheets

./: .gitignore  RATING.md  README.md
CG2027/: README.md
CG2028/: README.md
CG2028/CG2028AssignS1AY2122/: CG2028AssignS1AY2122 Release.launch
CG2028/CG2028AssignS1AY2122/CG2028AssignS1AY2122/: .cproject  .project  CG2028AssignS1AY2122 Debug.launch
CG2028/CG2028AssignS1AY2122/Debug/: CG2028AssignS1AY2122.map  CG2028AssignS1AY2122_Debug.ld  CG2028AssignS1AY2122_Debug_lib.ld  CG2028AssignS1AY2122_Debug_library.ld  CG2028AssignS1AY2122_Debug_memory.ld  cr_startup_lpc17.asm  main.asm  makefile  sources.mk
CG2028/CG2028AssignS1AY2122/Lib_CMSISv1p30_LPC17xx/: .cproject  .project
CG2028/CG2028AssignS1AY2122/Lib_EaBaseBoard/: .cproject  .project
CG2028/CG2028AssignS1AY2122/Lib_MCU/: .cproject  .project
CG2028/CG2028AssignS1AY2122/src/: classification.s  main.c
CS1010/: README.md
CS1010/Assignments/: README.md
CS1010/Assignments/as01-richwill28-master/: .clang-tidy  Makefile  box.c  compile_flags.txt  digits.c  feedback.md  suffix.c  taxi.c  test.sh
CS1010/Assignments/as02-richwill28-master/: Makefile  README.md  collatz.c  compile_flags.txt  feedback.md  pattern.c  prime.c  test.sh  triangle.c
CS1010/Assignments/as03-richwill28-master/: Makefile  README.md  compile_flags.txt  countingsort.c  feedback.md  id.c  kendall.c  max.c  test.sh
CS1010/Assignments/as04-richwill28-master/: .clang-tidy  Makefile  README.md  feedback.md  mastermind.c  selectionsort.c
CS1010/Assignments/as05-richwill28-master/: Makefile  compile_flags.txt  contact.c  feedback.md  life.c  questions.md  social.c
CS1010/Assignments/as06-richwill28-master/: Makefile  add.c  feedback.md  frequency.c  permutation.c  questions.md
CS1010/Assignments/as07-richwill28-master/: Makefile  README.md  feedback.md  inversion.c  peak.c  sort.c
CS1010/Assignments/as08-richwill28-master/: .clang-tidy  Makefile  feedback.md  maze.c  questions.md  walk.c
CS1010/Assignments/as09-richwill28-master/: .clang-tidy  Makefile  digits.c  feedback.md  questions.md  test.sh
CS1101S/: README.md
CS1101S/Reflection/: R2.js  R3.js
CS1101S/Studio/: S4.js
CS2030S/: README.md
CS2030S/Lab0/: .gitignore  Circle.java  Lab0.java  Point.java  RandomPoint.java
CS2030S/Lab0-richwill28/: Circle.java  Lab0.java  Test.java  test.sh
CS2030S/Lab0-richwill28/inputs/: Lab0.5.in
CS2030S/Lab0-richwill28/outputs/: Lab0.5.out  Lab0.7.out
CS2030S/Lab0-skeleton/: Circle.java  Lab0.java  Point.java  Question.md  RandomPoint.java  Test.java
CS2030S/Lab0-skeleton/inputs/: Lab0.8.in
CS2030S/Lab0-skeleton/outputs/: Lab0.6.out  Lab0.8.out
CS2030S/Lab0/inputs/: Lab0.4.in  Lab0.6.in
CS2030S/Lab0/outputs/: Lab0.4.out
CS2030S/Lab1/: Counter.java  Event.java  Question.md  ServiceEnd.java
CS2030S/Lab1-richwill28/: Customer.java  Departure.java  Lab1.java  Shop.java  ShopSimulation.java  Simulation.java  Simulator.java
CS2030S/Lab1-richwill28/inputs/: Lab1.1.in  Lab1.2.in  Lab1.3.in  Lab1.4.in
CS2030S/Lab1-richwill28/outputs/: Lab1.1.out  Lab1.2.out  Lab1.5.out
CS2030S/Lab1-skeleton/: Event.java  Lab1.java  ShopEvent.java  ShopSimulation.java  Simulation.java  Simulator.java
CS2030S/Lab1-skeleton/inputs/: Lab1.5.in
CS2030S/Lab1-skeleton/outputs/: Lab1.3.out
CS2030S/Lab2-richwill28/: .gitignore  Arrival.java  Customer.java  DepartureEvent.java  ServiceBegin.java  ServiceBeginEvent.java  ServiceEndEvent.java
CS2030S/Lab2-richwill28/inputs/: Lab2.2.in  Lab2.3.in  Lab2.6.in  Lab2.8.in
CS2030S/Lab2-richwill28/outputs/: Lab1.4.out  Lab2.1.out  Lab2.10.out  Lab2.3.out  Lab2.4.out  Lab2.7.out
CS2030S/Lab2-skeleton/: Lab2.java  Question.md  Queue.java  test.sh
CS2030S/Lab2-skeleton/inputs/: Lab2.1.in  Lab2.10.in  Lab2.4.in  Lab2.5.in  Lab2.7.in  Lab2.9.in
CS2030S/Lab3-richwill28/: ArrayTest.jsh  ArrivalEvent.java  Counter.java  JoinQueueEvent.java  Lab3.java  README.md  Shop.java  ShopSimulation.java
CS2030S/Lab3-skeleton/: QueueTest.jsh  test.sh
CS2040C/: README.md
CS2040C/Cheatsheets/: README.md
CS2040S/: README.md
CS2102/: README.md
CS2106/: README.md
CS2113T/: README.md
CS3210/: README.md
CS3211/: README.md
CS3241/: README.md
CS3241/assignments/lab3/: CMakeLists.txt  Lab3  Lab3_linux_done  Lab3_mac_done  image_io.cpp  image_io.h  main.cpp
CS3241/assignments/lab4/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  Lab4  Light.h  Main.cpp  Material.h  Plane.cpp  Plane.h  Ray.h  Raytrace.cpp  Raytrace.h  Scene.h  Sphere.cpp  Sphere.h  Surface.h  Triangle.cpp  Triangle.h  Util.cpp  Util.h  Vector3d.h
CS3241/lectures/lec05/: CMakeLists.txt  cubeview  cubeview.cpp  cubeview.sln  cubeview.vcxproj  test_glortho  test_glortho.cpp  test_glortho.sln  test_glortho.vcxproj
CS3243/: README.md
CS3245/: README.md
CS4212/: README.md
Data Structures and Algorithms/: ComparisonSort.cpp  ComparisonSort.java  LinkedList.cpp  NonComparisonSort.cpp  NonComparisonSort.java  PrimalityTest.js  README.md  SelectionAlgo.cpp  SelectionAlgorithm.cpp  sorting.cpp
Misc/: README.md
Misc/Data Structures and Algorithms/: CircularLinkedList.cpp  ComparisonSort.cpp  ComparisonSort.java  NonComparisonSort.cpp  NonComparisonSort.java
ST2334/: Excel commands to compute prob for special distributions Version 2.xlsx  README.md
TIC2001/: README.md
TIC2001/PE 2020/: Graph.cpp  Graph.h  StackAndQueue.h  book.h  cexample1.txt  cexample2.txt  cexample3.txt  graphTraveralexample1.txt  graphTraveralexample2.txt  graphTraveralexample3.txt  main  main.cpp  simpleLinkedListTemplate.cpp  simpleLinkedListTemplate.h
TIC2001/PE 2021/: password.txt
(+771 files in other folders)
